Fix brand image distortion

--- a/styles/block/_brand.scss
+++ b/styles/block/_brand.scss
@@ -46,6 +46,7 @@
         right: -230px;
         width: 1676px;
         height: 1355px;
+        object-fit: contain;
     }
 
     &__title {
